* 2016.11.08 - improved software detection (now can include sub-path in search)

* 2016.11.07 - added soft description 'tool.bazel' (useful to recompile Google's TensorFlow)

* 2016.11.04 - making os.getcwd() safer

* 2016.10.24 - added lib.tiny-dnn
             - fixes possible issues when installing packages for Android devices

* 2016.10.21 - added dependency on ARM WA tool if adding target machine that uses WA ...
             - added soft:android.sdk description and detection

* 2016.10.18 - added 'no_tags' to prune environments (set function) ...

* 2016.10.12 - added latest x86/x86_64 android OS descriptions (needed for ARM Workload Automation via CK)
             - added 'ck browse platform.*'

* 2016.10.11 - added 'shell' function to 'os' module to automate simple script execution

* 2016.10.10 - added detection of CPU clusters for Workload automation

* 2016.10.05 - obtaining real serial number of ADB devices (if via network) + adding dep on ADB tool for remote devices

* 2016.09.27 - added support for remote execution unified across all platforms

* 2016.09.26 - changed 'device' to 'machine'

* 2016.09.25 - various improvements in package/soft ...

* 2016.09.24 - added tool.show-cuda-devices and tool.show-opencl-devices
               for CK widget "platform.gpgpu"

* 2016.09.23 - added optional flag --target to all platform.*

* 2016.09.21 - improved "device" for ARM WA

* 2016.09.19 - added soft:compiler.gfortran
             - added soft:tool.adb (for ARM workload automation)

* 2016.09.18 - added many new Android descriptions (past and new such as Android 7.0.0)
             - added 'add', 'browse' and 'show' functions to 'device'
             - improving new CPU format detection (Linux/Android/MacOS)

* 2016.09.10 - added 'device' module to unify description of available user devices for crowd-benchmarking/crowd-tuning

* 2016.09.09 - updated DVDT OpenCL profiler soft description
